--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,13 +3,19 @@
 @tailwind components;
 @tailwind utilities;
 html {
-  font-size: 10;
+  font-size: 62.5%;
+  width: 100%;
+  height: 100%;
 }
 body {
   @apply leading-[normal] m-0;
+  width: 100%;
+  height: 100%;
 }
 *,
 ::before,
 ::after {
-  border-width: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
