--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -6,6 +6,7 @@ html {
   font-size: 62.5%;
   width: 100%;
   height: 100%;
+  font-family: "Inter", sans-serif;
 }
 body {
   @apply leading-[normal] m-0;
