--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 html {
-  font-size: 62.5%;
   width: 100%;
   height: 100%;
   font-family: "Inter", sans-serif;
@@ -19,4 +18,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.cl-rootBox {
+  font-size: 100% !important;
 }
