--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -20,6 +20,7 @@ body {
   box-sizing: border-box;
 }
 
-.cl-rootBox {
-  font-size: 100% !important;
+.cl-avatarBox {
+  width: 3rem;
+  height: 3rem;
 }
