--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -30,9 +30,9 @@ body {
 .cl-profileSectionSecondaryButton {
   display: none !important;
 }
-.cl-avatarBox {
-  width: 3rem;
-  height: 3rem;
+.cl-userButtonAvatarBox {
+  width: 50px;
+  height: 50px;
 }
 
 .cl-footerActionLink {
