fix styling RecipeView page

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -23,6 +23,11 @@ body {
   box-sizing: border-box;
 }
 
+button {
+  outline: none;
+  border-style: none;
+}
+
 .cl-userButtonPopoverActionButton__manageAccount {
   display: none !important;
 }
